<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="state"
                type="com.baymax104.chatapp.view.InfoActivity.States" />
        <variable
                name="handler"
                type="com.baymax104.chatapp.view.InfoActivity.Handler" />
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.InfoActivity">

        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar_layout"
                android:layout_alignParentTop="true"
                android:fitsSystemWindows="true">
            <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@color/bar_color"
                    android:id="@id/base_toolbar">
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_info"
                            style="@style/CommonToolbarTitleStyle"
                            android:layout_alignParentStart="true"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/confirm"
                            style="@style/ToolbarOptionTextStyle"
                            android:id="@+id/confirm"
                            android:textColor="@color/red"
                            android:layout_alignParentEnd="true"
                            android:onClick="@{handler.confirm}"
                            tools:ignore="RelativeOverlap" />

                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@{`用户ID：`+state.user.id}"
                android:gravity="start"
                android:id="@+id/user_id"
                android:layout_below="@id/toolbar_layout"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="30dp"
                android:paddingHorizontal="15dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:fontFamily="@font/normal"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@{`账号：`+state.user.account}"
                android:gravity="start"
                android:id="@+id/account"
                android:layout_below="@id/user_id"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="30dp"
                android:paddingHorizontal="15dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:fontFamily="@font/normal"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/username"
                android:layout_below="@id/account"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/username"
                style="@style/TextInputEditStyle">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:text="@{state.user.username}"
                    android:afterTextChanged="@{handler.setUsername}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/gender"
                android:layout_below="@id/username"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/user_gender"
                style="@style/TextInputEditStyle">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:text="@{state.user.gender}"
                    android:afterTextChanged="@{handler.setGender}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/gender"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/user_age"
                style="@style/TextInputEditStyle">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:text="@{state.user.age}"
                    android:afterTextChanged="@{handler.setAge}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg"
                android:text="@string/exit"
                style="@style/ButtonTextStyle"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:onClick="@{handler.exit}"/>
    </RelativeLayout>
</layout>